--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
-    "node-sass": "^6.0.1",
     "eslint": "^7.26.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -25,7 +25,8 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-sort-keys-fix": "^1.1.1"
+    "eslint-plugin-sort-keys-fix": "^1.1.1",
+    "node-sass": "^6.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
